# cmake_learning

./: README.md
project_1/: CMakeLists.txt  main.cpp
project_2/: CMakeLists.txt
project_3/: CMakeLists.txt
project_3/include/: head.h
project_4/: CMakeLists.txt
project_5/: CMakeLists.txt
project_5/src/: add.cpp  div.cpp  multi.cpp  sub.cpp
project_6/: CMakeLists.txt
project_6/src/: main.cpp
